tests/errors/if_different_types.ceos
print(if (1) {
  42
} else {
  "bar"
})
